feat: Add profile page settings table - EXO-60717 - Meeds-io/MIPs#38